--- a/index2.html
+++ b/index2.html
@@ -60,9 +60,9 @@ var random_place_array2 = [9.4, 5.328, 9.012, 10]
 
 <div class="yellow-box">
 <p>RMS Voltage:</p>
-<div id="out1"></div><br> 
+<div id="out1"></div><p>V</p><br> 
 <p>RMS Current:</p>
-<div id="out2"></div><br> 
+<div id="out2"></div><p>A</p><br> 
 <button onclick="stop1();">Stop1</button>
 <button onclick="stop2();">Stop2</button>
 <button onclick="setInterval(change1,500)">start1</button>
