--- a/index2.html
+++ b/index2.html
@@ -59,9 +59,9 @@ var random_place_array2 = [9.4, 5.328, 9.012, 10]
 
 
 <div class="yellow-box">
-<p>RMS Voltage:</p>
+<p>RMS Voltages:</p>
 <div id="out1"></div><p>V</p><br> 
-<p>RMS Current:</p>
+<p>RMS Currents:</p>
 <div id="out2"></div><p>A</p><br> 
 <button onclick="stop1();">Stop1</button>
 <button onclick="stop2();">Stop2</button>
